# visit-diff

./: .rustfmt.toml  Cargo.toml  README.md
diff/: Cargo.toml
diff/examples/: basic.rs
diff/src/: constant.rs  debug.rs  detect.rs  detect_all.rs  impls.rs  lib.rs  record.rs  refl.rs  std_impls.rs  unit.rs
diff/tests/: core.rs  std.rs  test.rs
diff/tests/common/: mod.rs
diff_derive/: Cargo.toml  README.md
diff_derive/src/: lib.rs
diff_derive/tests/: enums.rs  structs.rs
diff_derive_tests/: Cargo.toml
diff_derive_tests/tests/: structs.rs
diff_derive_tests/tests/common/: mod.rs
src/: debug.rs  detect.rs  lib.rs  refl.rs
