[package]
name = "visit_diff"
version = "0.1.0"
authors = ["Cliff L. Biffle <code@cliffle.com>"]
edition = "2018"
workspace = ".."
license = "BSD-2-Clause"
repository = "https://github.com/cbiffle/visit-diff"
categories = [
  "algorithms",
  "data-structures",
  "development-tools::testing",
  "no-std",
  "rust-patterns",
]

[dependencies]
void = { version = "1", default-features = false }
serde = { version = "1.0.87", optional = true }
visit_diff_derive = { path = "../diff_derive", optional = true }
itertools = { version = "0.8.0", default-features = false }

[features]
default = ["visit_diff_derive", "std"]
std = ["serde"]
