[package]
name = "visit_diff"
description = "Efficiently finding differences between data structures."
version = "0.1.0"
authors = ["Cliff L. Biffle <code@cliffle.com>"]
edition = "2018"
workspace = ".."
license = "BSD-2-Clause"
repository = "https://github.com/cbiffle/visit-diff"
categories = [
  "algorithms",
  "data-structures",
  "development-tools::testing",
  "no-std",
  "rust-patterns",
]

[dependencies]
void = { version = "1", default-features = false }
serde = { version = "1.0.87", optional = true }
itertools = { version = "0.8.0", default-features = false }

[dependencies.visit_diff_derive]
version = "0.1.0"
path = "../diff_derive"
optional = true


[features]
default = ["visit_diff_derive", "std"]
std = ["serde"]
