[package]
name = "visit_diff"
description = "Efficiently finding differences between data structures."
version = "0.1.1"
authors = ["Cliff L. Biffle <code@cliffle.com>"]
edition = "2018"
workspace = ".."
license = "BSD-2-Clause"
repository = "https://github.com/cbiffle/visit-diff"
readme = "../README.md"
categories = [
  "algorithms",
  "data-structures",
  "development-tools::testing",
  "no-std",
  "rust-patterns",
]

[dependencies]
void = { version = "1", default-features = false }
itertools = { version = "0.8.0", default-features = false }

[dependencies.visit_diff_derive]
version = "0.1.0"
path = "../diff_derive"
optional = true

[features]
default = ["visit_diff_derive", "std"]
std = []

[badges]
travis-ci = { repository = "cbiffle/visit-diff" }
