[package]
name = "visit_diff_derive_tests"
publish = false
description = "Tests separated out of visit_diff_derive."
version = "0.1.0"
authors = ["Cliff L. Biffle <code@cliffle.com>"]
edition = "2018"
workspace = ".."
license = "BSD-2-Clause"
repository = "https://github.com/cbiffle/visit-diff"

[dependencies]

[dev-dependencies]
visit_diff = { version = "0.1.0", path = "../diff" }
visit_diff_derive = { version = "0.1.0", path = "../diff_derive" }

[badges]
travis-ci = { repository = "cbiffle/visit-diff" }
